crates/safessh-tui/tests/snapshots/audit_snapshot__empty_state.snap
---
source: crates/safessh-tui/tests/audit_snapshot.rs
assertion_line: 40
expression: render(&s)
---
filters:  /p=-  /t=-  /g=-                                                                          
No audit events yet.
